--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,10 +14,14 @@ services:
     image: emailer-rest
     ports:
       - "8080:80"
+      - "8888:8888"
     depends_on:
       - db
     container_name: emailer-backend
     environment:
+      - EMAILER_CLIENT_ID
+      - EMAILER_CLIENT_SECRET
+      - EMAILER_PROJECT_ID
       - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/emailer
       - SPRING_DATASOURCE_USERNAME=emailer
       - SPRING_DATASOURCE_PASSWORD=emailer
