--- a/build.gradle
+++ b/build.gradle
@@ -24,9 +24,19 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'org.postgresql:postgresql'
 	annotationProcessor 'org.projectlombok:lombok'
+	implementation 'com.opencsv:opencsv:5.7.1'
+	implementation 'commons-io:commons-io:2.11.0'
+
+	//test
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+	//mail client
+	implementation 'com.google.api-client:google-api-client:2.0.0'
+	implementation 'com.google.oauth-client:google-oauth-client-jetty:1.34.1'
+	implementation 'com.google.apis:google-api-services-gmail:v1-rev20220404-2.0.0'
+	implementation 'com.sun.mail:javax.mail:1.6.2'
 }
 
-tasks.named('test') {
+test {
 	useJUnitPlatform()
 }
