--- a/build.gradle
+++ b/build.gradle
@@ -30,10 +30,13 @@ dependencies {
 	//test
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
-	//mail client
+	//google apis
 	implementation 'com.google.api-client:google-api-client:2.0.0'
 	implementation 'com.google.oauth-client:google-oauth-client-jetty:1.34.1'
 	implementation 'com.google.apis:google-api-services-gmail:v1-rev20220404-2.0.0'
+	implementation 'com.google.apis:google-api-services-sheets:v4-rev20220927-2.0.0'
+
+	//mail
 	implementation 'com.sun.mail:javax.mail:1.6.2'
 }
 
