--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,7 @@ services:
       - EMAILER_CLIENT_ID
       - EMAILER_CLIENT_SECRET
       - EMAILER_PROJECT_ID
+      - EMAILER_SPREADSHEET_ID
       - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/emailer
       - SPRING_DATASOURCE_USERNAME=emailer
       - SPRING_DATASOURCE_PASSWORD=emailer
